
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u32 ;
typedef int BYTE ;


 int BSWAP (int) ;
 int RHO ;
 int ROL (int,int) ;
 int RSMatrixMultiply (int *) ;
 int _b (int,int) ;
 int h (int,int*,int) ;
 scalar_t__ malloc (int) ;

void keySched(BYTE M[], int N, u32 **S, u32 K[40], int *k)
{
    u32 Mo[4], Me[4];
    int i, j;
    BYTE vector[8];
    u32 A, B;

    *k = (N + 63) / 64;
    *S = (u32*)malloc(sizeof(u32) * (*k));

    for (i = 0; i < *k; i++)
    {
 Me[i] = BSWAP(((u32*)M)[2*i]);
 Mo[i] = BSWAP(((u32*)M)[2*i+1]);
    }

    for (i = 0; i < *k; i++)
    {
 for (j = 0; j < 4; j++) vector[j] = _b(Me[i], j);
 for (j = 0; j < 4; j++) vector[j+4] = _b(Mo[i], j);
 (*S)[(*k)-i-1] = RSMatrixMultiply(vector);
    }
    for (i = 0; i < 20; i++)
    {
 A = h(2*i*RHO, Me, *k);
 B = ROL(h(2*i*RHO + RHO, Mo, *k), 8);
 K[2*i] = A+B;
 K[2*i+1] = ROL(A + 2*B, 9);
    }
}
